Update commiters list and fix spacing

--- a/landing-pages/site/assets/scss/_list-boxes.scss
+++ b/landing-pages/site/assets/scss/_list-boxes.scss
@@ -24,7 +24,8 @@ $card-margin: 20px;
 .list-items {
   display: flex;
   flex-wrap: wrap;
-  margin: calc(-1 * #{$card-margin});
+  margin: #{-1 * $card-margin};
+  align-items: stretch;
 
   @media (max-width: $tablet) {
     margin: auto;
@@ -39,11 +40,12 @@ $card-margin: 20px;
 
 .list-item {
   width: 25%;
-
+  padding: $card-margin;
   @media (min-width: $fullhd) {
     width: 20%;
   }
   @media (max-width: $tablet) {
+    padding: 1.5 * $card-margin;
     width: 50%;
   }
   @media (max-width: $mobile) {
@@ -61,14 +63,8 @@ $card-margin: 20px;
 .card {
   border: solid 1px map_get($colors, very-light-pink);
   border-radius: 5px;
-  margin: $card-margin;
   padding: 30px 10px;
-  height: calc(100% - #{$card-margin} * 2);
-
-  @media (max-width: $tablet) {
-    margin: $card-margin / 2;
-    height: calc(100% - #{$card-margin});
-  }
+  height: 100%;
 }
 
 .box-event {
